<resources>
    <string name="app_name">Nari Raksha</string>
    <string name="your_safety_our_priority">Your safety, our promise</string>
    <string name="an_app_that_will_enhance_your_safety_and_security_in_various_situations">An app that will enhance your safety and security in various situations.</string>
    <string name="get_started">Get Started</string>
    <string name="email">Email</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="forget_password_n">Forget Password</string>
    <string name="welcome_oliva_grace">Welcome, Oliva Grace</string>
    <string name="title_activity_sos_maps">sosMaps</string>
    <string name="your_safety_is_our_mission_who_do_you_want_to_sms">Your safety is our mission. Who do you want to SMS.</string>
    <string name="emergency_sms">Emergency SMS</string>
    <string name="your_safety_is_our_mission_nwho_do_you_want_to_sms">Your safety is our mission.\nWho do you want to SMS.</string>
    <string name="save">Save</string>
    <string name="add_number">Add Number</string>
    <string name="back">Back</string>
    <string name="father">Father</string>
    <string name="helpline_numbers">Helpline Numbers</string>
    <string name="support_icon">support icon</string>
    <string name="ask_for_help">Ask for help</string>
    <string name="reach_out_to_us_for_help_at_8372084241_we_are_here_to_support_you">Reach out to us for help at 8372084241. We are here to support you.</string>
    <string name="tech_s_helpline">Tech’s Helpline</string>
    <string name="tech_helpline">Tech Helpline</string>
    <string name="for_assistance_please_call_our_official_number_8372084241">For assistance, please call our official number: 8372084241.</string>
    <string name="common_helpline_numbers">Common Helpline Numbers</string>
    <string name="national_helpline_icon">national helpline icon</string>
    <string name="national_helpline">National Helpline</string>
    <string name="the_common_helpline_number_for_your_country_is_8372084241">The common helpline number for your country is: 8372084241.</string>
    <string name="logout">LogOut</string>
    <string name="record">Record</string>
    <string name="your_safety_is_our_mission_recording_is_started">Your safety is our mission. Recording is started.</string>
</resources>